# kerr-boson-tidal-transitions

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
results/baseline/: baseline_benchmarks.csv  baseline_report.md  baseline_summary.json  q_ep_scan.csv  q_ep_scan_summary.json  timescales.csv  timescales.json
results/dynamics/: dynamics_report.md  formation_history.csv  formation_history.json  near_ep_checkpoint.json  near_ep_widths.csv  near_ep_widths.json  spectrum_calibration.csv  spectrum_calibration.json  transition_trajectories.csv  transition_trajectories.json
results/relativistic_tides/: convergence.csv  convergence.json  gauge_audit.csv  gauge_audit.json  mode_catalog.csv  mode_catalog.json  phenomenology.csv  phenomenology.json  relativistic_tides_report.md  scan_summary.json  transition_atlas.csv  transition_atlas.json  weak_field_gauge_audit.csv  weak_field_gauge_audit.json
scripts/: audit_weak_field.py  calibrate_spectrum.py  certify_pre_atlas.py  certify_pre_atlas_v2.py  evolve_transition.py  reproduce_baseline.py  scan_near_ep.py  scan_q_ep.py  scan_relativistic_atlas.py  scan_relativistic_atlas_v2.py  timescale_table.py  validate_kernel_results.py
src/boson_ep/: __init__.py  certification.py  constants.py  dynamics.py  (+14 more)
tests/: __init__.py  test_atlas_v2.py  test_certification.py  test_certification_v2.py  test_dynamics.py  test_gauge_v2.py  test_kernel_validation.py  test_relativistic_tides.py  test_relativity_formation.py  test_relativity_v2.py  test_spectrum.py  test_symbolic.py  test_tides_ep.py  test_timescales.py
(+46 files in other folders)
