[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boson-ep"
version = "0.1.0"
description = "Covariant adiabatic Kerr tidal transitions of black-hole boson clouds"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.16",
    "sympy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]
